--- a/APS03parte2.ipynb
+++ b/APS03parte2.ipynb
@@ -397,6 +397,542 @@
     "dados = pd.read_parquet(\"pnad_trimestral_trimestre_042024.parquet\")\n",
     "dados"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "43a1a4c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ano</th>\n",
+       "      <th>Trimestre</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>Capital</th>\n",
+       "      <th>RM_RIDE</th>\n",
+       "      <th>UPA</th>\n",
+       "      <th>Estrato</th>\n",
+       "      <th>V1008</th>\n",
+       "      <th>V1014</th>\n",
+       "      <th>V1016</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V1028193</th>\n",
+       "      <th>V1028194</th>\n",
+       "      <th>V1028195</th>\n",
+       "      <th>V1028196</th>\n",
+       "      <th>V1028197</th>\n",
+       "      <th>V1028198</th>\n",
+       "      <th>V1028199</th>\n",
+       "      <th>V1028200</th>\n",
+       "      <th>COD_FAM</th>\n",
+       "      <th>COD_PESSOA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>342708</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>410000118</td>\n",
+       "      <td>4154013</td>\n",
+       "      <td>01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>234.272172</td>\n",
+       "      <td>117.043993</td>\n",
+       "      <td>119.738789</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>249.476567</td>\n",
+       "      <td>236.152336</td>\n",
+       "      <td>4100001180111</td>\n",
+       "      <td>410000118011101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342709</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>410000118</td>\n",
+       "      <td>4154013</td>\n",
+       "      <td>01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>234.272172</td>\n",
+       "      <td>117.043993</td>\n",
+       "      <td>119.738789</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>249.476567</td>\n",
+       "      <td>236.152336</td>\n",
+       "      <td>4100001180111</td>\n",
+       "      <td>410000118011102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342710</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>410000118</td>\n",
+       "      <td>4154013</td>\n",
+       "      <td>01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>234.272172</td>\n",
+       "      <td>117.043993</td>\n",
+       "      <td>119.738789</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>249.476567</td>\n",
+       "      <td>236.152336</td>\n",
+       "      <td>4100001180111</td>\n",
+       "      <td>410000118011103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342711</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>410000118</td>\n",
+       "      <td>4154013</td>\n",
+       "      <td>02</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>213.943843</td>\n",
+       "      <td>104.871698</td>\n",
+       "      <td>107.092646</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>225.982058</td>\n",
+       "      <td>214.261095</td>\n",
+       "      <td>4100001180211</td>\n",
+       "      <td>410000118021101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342712</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>410000118</td>\n",
+       "      <td>4154013</td>\n",
+       "      <td>02</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>213.943843</td>\n",
+       "      <td>104.871698</td>\n",
+       "      <td>107.092646</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>225.982058</td>\n",
+       "      <td>214.261095</td>\n",
+       "      <td>4100001180211</td>\n",
+       "      <td>410000118021102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422851</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>430286848</td>\n",
+       "      <td>4354011</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>517.710572</td>\n",
+       "      <td>550.361529</td>\n",
+       "      <td>1554.268078</td>\n",
+       "      <td>540.724601</td>\n",
+       "      <td>1084.060302</td>\n",
+       "      <td>4302868481312</td>\n",
+       "      <td>430286848131202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422852</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>430286848</td>\n",
+       "      <td>4354011</td>\n",
+       "      <td>13</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>517.710572</td>\n",
+       "      <td>550.361529</td>\n",
+       "      <td>1554.268078</td>\n",
+       "      <td>540.724601</td>\n",
+       "      <td>1084.060302</td>\n",
+       "      <td>4302868481312</td>\n",
+       "      <td>430286848131203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422853</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>430286848</td>\n",
+       "      <td>4354011</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>627.289603</td>\n",
+       "      <td>623.461969</td>\n",
+       "      <td>1816.756255</td>\n",
+       "      <td>596.362589</td>\n",
+       "      <td>1289.116060</td>\n",
+       "      <td>4302868481412</td>\n",
+       "      <td>430286848141201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422854</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>430286848</td>\n",
+       "      <td>4354011</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>627.289603</td>\n",
+       "      <td>623.461969</td>\n",
+       "      <td>1816.756255</td>\n",
+       "      <td>596.362589</td>\n",
+       "      <td>1289.116060</td>\n",
+       "      <td>4302868481412</td>\n",
+       "      <td>430286848141202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>422855</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>4</td>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>430286848</td>\n",
+       "      <td>4354011</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>627.289603</td>\n",
+       "      <td>623.461969</td>\n",
+       "      <td>1816.756255</td>\n",
+       "      <td>596.362589</td>\n",
+       "      <td>1289.116060</td>\n",
+       "      <td>4302868481412</td>\n",
+       "      <td>430286848141203</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80148 rows × 422 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Ano  Trimestre  UF  Capital  RM_RIDE        UPA  Estrato V1008 V1014  \\\n",
+       "342708  2024          4  41      NaN      NaN  410000118  4154013    01    11   \n",
+       "342709  2024          4  41      NaN      NaN  410000118  4154013    01    11   \n",
+       "342710  2024          4  41      NaN      NaN  410000118  4154013    01    11   \n",
+       "342711  2024          4  41      NaN      NaN  410000118  4154013    02    11   \n",
+       "342712  2024          4  41      NaN      NaN  410000118  4154013    02    11   \n",
+       "...      ...        ...  ..      ...      ...        ...      ...   ...   ...   \n",
+       "422851  2024          4  43      NaN      NaN  430286848  4354011    13    12   \n",
+       "422852  2024          4  43      NaN      NaN  430286848  4354011    13    12   \n",
+       "422853  2024          4  43      NaN      NaN  430286848  4354011    14    12   \n",
+       "422854  2024          4  43      NaN      NaN  430286848  4354011    14    12   \n",
+       "422855  2024          4  43      NaN      NaN  430286848  4354011    14    12   \n",
+       "\n",
+       "        V1016  ...    V1028193    V1028194    V1028195    V1028196  \\\n",
+       "342708      3  ...  234.272172  117.043993  119.738789    0.000000   \n",
+       "342709      3  ...  234.272172  117.043993  119.738789    0.000000   \n",
+       "342710      3  ...  234.272172  117.043993  119.738789    0.000000   \n",
+       "342711      3  ...  213.943843  104.871698  107.092646    0.000000   \n",
+       "342712      3  ...  213.943843  104.871698  107.092646    0.000000   \n",
+       "...       ...  ...         ...         ...         ...         ...   \n",
+       "422851      1  ...    0.000000    0.000000    0.000000  517.710572   \n",
+       "422852      1  ...    0.000000    0.000000    0.000000  517.710572   \n",
+       "422853      1  ...    0.000000    0.000000    0.000000  627.289603   \n",
+       "422854      1  ...    0.000000    0.000000    0.000000  627.289603   \n",
+       "422855      1  ...    0.000000    0.000000    0.000000  627.289603   \n",
+       "\n",
+       "          V1028197     V1028198    V1028199     V1028200        COD_FAM  \\\n",
+       "342708    0.000000     0.000000  249.476567   236.152336  4100001180111   \n",
+       "342709    0.000000     0.000000  249.476567   236.152336  4100001180111   \n",
+       "342710    0.000000     0.000000  249.476567   236.152336  4100001180111   \n",
+       "342711    0.000000     0.000000  225.982058   214.261095  4100001180211   \n",
+       "342712    0.000000     0.000000  225.982058   214.261095  4100001180211   \n",
+       "...            ...          ...         ...          ...            ...   \n",
+       "422851  550.361529  1554.268078  540.724601  1084.060302  4302868481312   \n",
+       "422852  550.361529  1554.268078  540.724601  1084.060302  4302868481312   \n",
+       "422853  623.461969  1816.756255  596.362589  1289.116060  4302868481412   \n",
+       "422854  623.461969  1816.756255  596.362589  1289.116060  4302868481412   \n",
+       "422855  623.461969  1816.756255  596.362589  1289.116060  4302868481412   \n",
+       "\n",
+       "             COD_PESSOA  \n",
+       "342708  410000118011101  \n",
+       "342709  410000118011102  \n",
+       "342710  410000118011103  \n",
+       "342711  410000118021101  \n",
+       "342712  410000118021102  \n",
+       "...                 ...  \n",
+       "422851  430286848131202  \n",
+       "422852  430286848131203  \n",
+       "422853  430286848141201  \n",
+       "422854  430286848141202  \n",
+       "422855  430286848141203  \n",
+       "\n",
+       "[80148 rows x 422 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ufs_desejadas = [43, 42, 41]  # 43 = RS, 42 = SC, 41 = PR\n",
+    "df_filtrado = dados[dados['UF'].isin(ufs_desejadas)]\n",
+    "df_filtrado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "556296b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VD4020</th>\n",
+       "      <th>VD4002</th>\n",
+       "      <th>V2007</th>\n",
+       "      <th>V1028</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>342708</th>\n",
+       "      <td>2800.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>109.706662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342709</th>\n",
+       "      <td>1500.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>109.706662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342714</th>\n",
+       "      <td>9000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>102.637692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342718</th>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>199.053115</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>342719</th>\n",
+       "      <td>2800.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>131.130543</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        VD4020  VD4002  V2007       V1028\n",
+       "342708  2800.0     1.0      1  109.706662\n",
+       "342709  1500.0     1.0      2  109.706662\n",
+       "342714  9000.0     1.0      1  102.637692\n",
+       "342718  2000.0     1.0      1  199.053115\n",
+       "342719  2800.0     1.0      1  131.130543"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Passo 1: Filtrar apenas pessoas ocupadas (VD4002 == 1)\n",
+    "df_ocupados = df_filtrado[df_filtrado['VD4002'] == 1].copy()\n",
+    "\n",
+    "# Passo 2: Remover registros com rendimento inválido ou não informado (VD4020 <= 0)\n",
+    "df_ocupados = df_ocupados[df_ocupados['VD4020'] > 0]\n",
+    "\n",
+    "# Passo 3: Dados relevantes\n",
+    "df_ocupados_relevantes = df_ocupados[['VD4020', 'VD4002', 'V2007', 'V1028']]\n",
+    "\n",
+    "# Verificar os dados filtrados\n",
+    "df_ocupados_relevantes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c84d45b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bootstrap_ci(df, col, weight_col, n_bootstrap=1000, alpha=0.05):\n",
+    "    \"\"\"\n",
+    "    Calcula estatística (média ou proporção ponderada) e intervalo de confiança usando\n",
+    "    bootstrap.\n",
+    "\n",
+    "    Parâmetros:\n",
+    "    ----------\n",
+    "    df : DataFrame\n",
+    "        DataFrame contendo os dados\n",
+    "    col : str\n",
+    "        Nome da coluna com a variável numérica (pode ser 0/1 ou contínua)\n",
+    "    weight_col : str\n",
+    "        Nome da coluna contendo os pesos amostrais\n",
+    "    n_bootstrap : int, opcional\n",
+    "        Número de amostras bootstrap (padrão: 1000)\n",
+    "    alpha : float, opcional\n",
+    "        Nível de significância (padrão: 0.05 para IC de 95%)\n",
+    "\n",
+    "    Retorna:\n",
+    "    -------\n",
+    "    float, tuple\n",
+    "        Estatística ponderada original e tupla com limites inferior e superior do IC\n",
+    "    \"\"\"\n",
+    "    # Estatística original (proporção ou média ponderada)\n",
+    "    stat_original = np.average(df[col], weights=df[weight_col])\n",
+    "\n",
+    "    # Estimativas bootstrap\n",
+    "    estimates = []\n",
+    "\n",
+    "    for _ in range(n_bootstrap):\n",
+    "        sample = df.sample(frac=1, replace=True)\n",
+    "        stat = np.average(sample[col], weights=sample[weight_col])\n",
+    "        estimates.append(stat)\n",
+    "\n",
+    "    # Intervalo de confiança\n",
+    "    lower = np.percentile(estimates, 100 * alpha / 2)\n",
+    "    upper = np.percentile(estimates, 100 * (1- alpha / 2))\n",
+    "\n",
+    "    return stat_original, (lower, upper)"
+   ]
   }
  ],
  "metadata": {
